// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render correctly 1`] = `
<div>
  <nav
    class="navbar-primary text-white mb-4 justify-between"
  >
    <div
      class="container"
    >
      <h2
        class="site-title"
      >
        [missing "en-US.header.title" translation]
      </h2>
      <ul
        class="display-f justify-center align-center gap-2"
      >
        <li>
          <svg
            data-testid="desktop"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 640 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M624 416H381.54c-.74 19.81-14.71 32-32.74 32H288c-18.69 0-33.02-17.47-32.77-32H16c-8.8 0-16 7.2-16 16v16c0 35.2 28.8 64 64 64h512c35.2 0 64-28.8 64-64v-16c0-8.8-7.2-16-16-16zM576 48c0-26.4-21.6-48-48-48H112C85.6 0 64 21.6 64 48v336h512V48zm-64 272H128V64h384v256z"
            />
          </svg>
        </li>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/library"
          >
            Library
          </a>
        </li>
        <li>
          <a
            href="/chat"
          >
            Chat
          </a>
        </li>
        <li>
          <button
            class="btn-light text-dark font-md"
            data-testid="btn-change-theme"
          >
            light
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<Header /> should render dark theme 1`] = `
<div>
  <nav
    class="navbar-primary text-white mb-4 justify-between"
  >
    <div
      class="container"
    >
      <h2
        class="site-title"
      >
        [missing "en-US.header.title" translation]
      </h2>
      <ul
        class="display-f justify-center align-center gap-2"
      >
        <li>
          <svg
            data-testid="desktop"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 640 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M624 416H381.54c-.74 19.81-14.71 32-32.74 32H288c-18.69 0-33.02-17.47-32.77-32H16c-8.8 0-16 7.2-16 16v16c0 35.2 28.8 64 64 64h512c35.2 0 64-28.8 64-64v-16c0-8.8-7.2-16-16-16zM576 48c0-26.4-21.6-48-48-48H112C85.6 0 64 21.6 64 48v336h512V48zm-64 272H128V64h384v256z"
            />
          </svg>
        </li>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/library"
          >
            Library
          </a>
        </li>
        <li>
          <a
            href="/chat"
          >
            Chat
          </a>
        </li>
        <li>
          <button
            class="btn-light text-dark font-md"
            data-testid="btn-change-theme"
          >
            dark
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
